--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,14 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@font-face {
+	/* Reference name */
+	font-family: 'Overpass';
+	/* For multiple files use commas, ex: url(), url(), ... */
+	src: url('/fonts/Overpass-VariableFont_wght.ttf'), url('/fonts/Overpass-Italic-VariableFont_wght.ttf');
+}
+
+@font-face {
+	/* Reference name */
+	font-family: 'Poppins';
+	/* For multiple files use commas, ex: url(), url(), ... */
+	src: url('/fonts/Poppins-Regular.ttf'), url('/fonts/Poppins-Light.ttf'), url('/fonts/Poppins-Medium.ttf');
+}
+
