--- a/src/app.css
+++ b/src/app.css
@@ -15,10 +15,17 @@
 .noise {
   background-image: url("data:image/svg+xml,<svg viewBox='0 0 250 250' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='2' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
 }
+.transition-colors {
+  transition-timing-function: ease-in-out;
+}
 
-body { @apply bg-surface-100-800-token; }
 
-a { @apply !text-warning-600-300-token }
+body { 
+  @apply bg-surface-100-800-token;   
+  @apply transition-colors;
+}
+
+a { @apply !text-warning-600-300-token; }
 
 .prose { @apply mt-0; }
 
