--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,8 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@tailwind variants;
+
 @font-face {
 	/* Reference name */
 	font-family: 'Overpass';
@@ -31,7 +36,43 @@ body {
 /* } */
 
 .prose {
-	@apply mt-0;
+	@apply dark:text-white text-primary-900;
+}
+
+.prose blockquote {
+	@apply blockquote;
+}
+
+.prose a {
+	@apply anchor !text-warning-600-300-token;
+}
+
+.prose h1 {
+	@apply h2;
+}
+
+.prose h2 {
+	@apply h3;
+}
+
+.prose h3 {
+	@apply h4;
+}
+
+.prose h4 {
+	@apply h4;
+}
+
+.prose h5 {
+	@apply h5;
+}
+
+.prose h6 {
+	@apply h6;
+}
+
+.prose strong {
+	@apply font-bold text-primary-900 dark:text-white;
 }
 
 .section-title {
@@ -52,3 +93,7 @@ body {
 .accordion-panel a {
 	@apply !text-warning-600;
 }
+
+/* .a { */
+/* 	@apply anchor; */
+/* } */
